# sdl3_vulkan_module_c

./: CMakeLists.txt  README.md  design_module.md  run.bat  shader.bat  vulkan_context.md  vulkan_design.md
assets/: font.frag  font.vert  minimal.frag  minimal.vert  shader.vert
base/: base_triangle.c  base_triangle_resize.c  base_triangle_resize_font.c  test.c  triangle_resize_imgui.c
examples/: sdl3_opengl_cimgui.c  sdl3_vulkan_triangle_font_h_resize.c  sdl3_vulkan_triangle_font_h_resize_upsidedown.c  sdl3_vulkan_triangle_h_resize.c  sdl3_vulkan_triangle_h_sample.c  sdl3_vulkan_triangle_imgui.c  sdl3_vulkan_triangle_imgui_h.c  sdl3_vulkan_triangle_imgui_h_resize.c  sdl3_vulkan_triangle_imgui_spv.c  sdl3_vulkan_triangle_minimal.c  sdl3_vulkan_triangle_sample.c  sdl3_vulkan_triangle_spv_sample.c
include/: font_frag.h  font_vert.h  imgui_module.h  triangle_frag.h  triangle_module.h  triangle_vert_spv.h  vulkan_module.h
src/: imgui_module.c  main.c  triangle_module.c  vulkan_module.c
